# lifeline1

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  DYNAMIC_UI.md  LAUNCH.md  README.md  SECURITY_REVIEW.md
.cargo/: audit.toml
.claude/skills/appstore-readiness/: SKILL.md
.claude/skills/run-lifeline/: SKILL.md  driver.mjs
.claude/skills/ui-ux-pro-max/: ATTRIBUTION.md
config/: default.toml
demo/: index.html
deploy/: .env.production.example  Dockerfile  GO-LIVE.md  fly.toml
design-system/lifeline/: MASTER.md
graphify-out/: .graphify_analysis.json  .graphify_labels.json  .graphify_labels.json.sig  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
infra/: CONNECTORS.md
marketing/: AD_CAMPAIGNS.md  POSITIONING.md
migrations/: 001_initial.sql  002_audit_logs.sql  003_integrations.sql  004_gamification_billing.sql  006_accounts.sql
native/: README.md  capacitor.config.json  package.json
native/assets/: README.md
native/plugins/lifeline-native/: LifelineNative.podspec  README.md  package.json  rollup.config.js  tsconfig.json
native/plugins/lifeline-native/android/: build.gradle
native/plugins/lifeline-native/android/src/main/: AndroidManifest.xml
native/plugins/lifeline-native/android/src/main/java/health/lifeline/nativebridge/: LifelineNativePlugin.kt
native/plugins/lifeline-native/ios/Sources/LifelineNativePlugin/: LifelineNativePlugin.m  LifelineNativePlugin.swift
native/plugins/lifeline-native/src/: definitions.ts  index.ts  web.ts
native/privacy/: PrivacyInfo.xcprivacy
scripts/: load_test.sh  pgo_build.sh
src/: config.rs  errors.rs  lib.rs  main.rs  state.rs
src/crypto/: assertion.rs  attestation.rs  mod.rs  nonce.rs  oauth_state.rs  password.rs  session.rs  token_vault.rs
src/db/: accounts.rs  admin.rs  audit.rs  billing.rs  devices.rs  game.rs  integrations.rs  mod.rs  sync.rs
src/middleware/: attest_guard.rs  mod.rs
src/models/: account.rs  device.rs  game.rs  mod.rs  provider_connection.rs  subscription.rs  sync_document.rs
src/routes/: account.rs  admin.rs  ai.rs  auth.rs  billing.rs  game.rs  health.rs  insights.rs  integrations.rs  mod.rs  stream.rs  sync.rs
store/: APP_STORE_AUDIT.md  LAUNCH_CHECKLIST.md  LISTING.md  PRIVACY_LABELS.md  REVIEW_NOTES.md
store/screenshots/: README.txt
tests/: integration_tests.rs
web/: admin.html  compare.html  index.html  manifest.webmanifest  privacy.html  sw.js
web/assets/: admin.js  api.js  app.css  app.js  charts.js  composer.js  device.js  engine.js  feelslider.js  localai.js  native-bridge.js  notify.js  sound.js  usage.js
website/: README.md  app.js  firebase-config.js  firebase.json  firestore.rules  index.html
