[package]
name = "antigravity"
version = "0.1.0"
edition = "2021"
description = "Antigravity Secure Backend Framework Engine for Lifeline iOS"
publish = false

[dependencies]
# ── Web Framework & Async Runtime ─────────────────────────────────────────────
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
http = "1"
bytes = "1"

# ── Database ──────────────────────────────────────────────────────────────────
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
] }

# ── Serialization ─────────────────────────────────────────────────────────────
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ciborium = "0.2"

# ── Cryptography ──────────────────────────────────────────────────────────────
ring = "0.17"
x509-cert = "0.2"
der = { version = "0.7", features = ["std"] }

# ── In-Process Caching ────────────────────────────────────────────────────────
moka = { version = "0.12", features = ["sync"] }

# ── HTTP Client (AI Proxy Outbound) ───────────────────────────────────────────
reqwest = { version = "0.12", features = ["json"] }

# ── Utilities ─────────────────────────────────────────────────────────────────
# NOTE: async-trait is retained because the `Database` trait is used via
# `Arc<dyn Database>` (dynamic dispatch). Native `async fn` in traits is not
# object-safe in current Rust. If we move to generic `AppState<DB: Database>`
# in the future, this dependency can be removed.
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
hex = "0.4"

# ── Configuration ─────────────────────────────────────────────────────────────
# default-features = false drops unused formats (ron, json, yaml, json5, ini)
# and eliminates the transitive duplicate `base64 0.21.x` dependency from `ron`.
config = { version = "0.14", default-features = false, features = ["toml"] }

# ── Environment & Secrets ─────────────────────────────────────────────────────
dotenvy = "0.15"

# ── Error Handling ────────────────────────────────────────────────────────────
thiserror = "2"
anyhow = "1"

# ── Rate Limiting ─────────────────────────────────────────────────────────────
tower_governor = "0.6"

# ── Observability ─────────────────────────────────────────────────────────────
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
axum-prometheus = "0.8"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
